# gmKriger

./: .gitignore  CITATION.cff  Example_1.ipynb  HISTORY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
Examples/: Example_1.ipynb  Example_1_LomaPrieta89.ipynb  Example_2.ipynb  Example_2_Turkey23.ipynb  Example_3.ipynb  Example_3_SuperstitionHills87.ipynb  Get_models.ipynb
examples/: Example_1_LomaPrieta89.ipynb  Example_1_LomaPrieta89_PGAs.ipynb  Example_2_LomaPrieta89_Cython.ipynb  Example_2_Turkey23.ipynb  Example_3_LomaPrieta89_Python.ipynb  Example_3_SuperstitionHills87.ipynb  Example_4_Turkey23.ipynb  Example_5_SuperstitionHills87.ipynb  Get_models.ipynb
gmKriger/: __init__.py  core.py  gmKriger.py  helpers.py  reader.py
gmKriger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gmKriger/Data/: 1968 M8.2 Tokachi-Oki.json  1971 M6.6 San Fernando.json  1978 M7.7 Miyagiken-Oki.json  1979 M6.5 Imperial Valley.json  1980 M6.3 Victoria.json  1981 M5.9 Westmorland.json  1983 M6.8 Nihonkai-Chubu.json  1983 M7.7 Nihonkai-Chubu.json  1987 M6.5 Superstition Hills.json  1989 M6.9 Loma Prieta.json  1993 M7.6 Kushiro-Oki Hokkaido.json  1994 M6.7 Northridge.json  1994 M8.3 Toho-Oki Hokkaido.json  1995 M6.9 Kobe.json  1999 M7.5 Kocaeli.json  1999 M7.6 Chi-Chi.json  2000 M6.6 Tottori.json  2002 M5.0 Au Sable Forks.json  2003 M8.3 Tokachi.json  2007 M6.8 Chuetsu-oki.json  2010 M7.0 Darfield.json  2010 M7.2 El Mayor-Cucapah.json  2010 M8.8 Maule.json  2011 M5.0 Christchurch.json  2011 M5.9 Lyttelton.json  2011 M5.9 Lyttleton.json  2011 M6.0 Christchurch.json  2011 M6.2 Christchurch.json  2011 M9.1 Tohoku-Oki.json  2012 M6.0 Emilia.json  2012 M6.1 Emilia.json  2019 M6.48 Ridgecrest.json  2019 M7.06 Ridgecrest.json  2020 M7.0 Samos.json  2023 M6.3 Yayladagi.json  2023 M6.37 Yayladagi.json  2023 M6.8 Nurdagi.json  2023 M6.81 Nurdagi.json  2023 M7.7 Kahramanmaras.json  2023 M7.74 Kahramanmaras.json  (+3 more)
