[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "gmKriger"
version = "1.0.0"
description = "Kriging-based ground motion intensity measure calculator."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
		{ name = "Renmin Pretell"},
		{ name = "Scott J. Brandenberg" },
		{ name = "Jonathan P. Stewart" }
		]

dependencies = [
	"numpy",
	"geostats",
	"gmms",
	"pygmm",
]
keywords = ["ground motion","Kriging","interpolation"]
classifiers=[
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gmKriger = ["Data/*.json", "Data/models.csv"]
