[metadata]
name = gmKriger
version = 0.1.0
author = A. Renmin Pretell Ductram
author_email = rpretell@unr.edu
description = Kriging-based ground motion intensity measure calculator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RPretellD/gmKriger
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	
[options]
packages = find:
python_requires = >=3.6
include_package_data = True
